Fix contrast error caused by secondary background color

--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -75,7 +75,7 @@
         cursor: pointer;
         font-size: 1.2rem;
         text-decoration: none;
-        color: #fff;
+        color: v.$primary-text-color;
       }
     }
   }
