--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $secondary-accent-color: #867C77;
 $ternary-accent-color: #D9CFC9;
 
 $primary-background-color: #F4F4F4;
-$secondary-background-color: #58889C;
+$secondary-background-color: #507c8f;
 $ternary-background-color: #FFFFFF;
 
 $primary-text-color: #FFFFFF;
